# GradGlass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  test.yml
docs/: analysis-and-data.md  analysis.md  architecture.md  artifact-layout.md  artifacts.md  cli.md  configuration.md  dashboard-and-api.md  dashboard-features-summary.md  dashboard.md  examples.md  getting-started.md  index.md  leakage.md  python-api.md  releasing.md
examples/: 01_pytorch_core_tracking.py  02_keras_integration.py  03_data_leakage.py  04_dataset_monitoring.py  05_custom_tests_and_shap.py  06_workspace_and_server.py  07_pytorch_full_observability.py  08_api_feature_coverage.py  09_dashboard_showcase.py  README.md  _example_output.py  _showcase_support.py  gradient_instability_demo.py  interpretability_demo.py  leakage_demo.py  mnist_demo.py  overfitting_demo.py  regression_demo.py  sklearn_demo.py  tensorflow_demo.py  time_series_demo.py  transfer_learning_demo.py  xgboost_demo.py
gradglass/: __init__.py  alerts.py  artifacts.py  browser.py  capture.py  cli.py  core.py  diff.py  evaluation.py  experiment_tracking.py  monitor_control.py  run.py  server.py  telemetry.py  visualizations.py
gradglass/analysis/: __init__.py  builtins.py  leakage.py  registry.py  report.py  runner.py
gradglass/analysis/data_monitor/: __init__.py  adapters.py  analyzers.py  builder.py  fingerprinting.py  inspectors.py  models.py
gradglass/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gradglass/dashboard/src/: App.jsx  api.js  index.css  utils.js
gradglass/dashboard/src/components/: Layout.jsx  RunRouteController.jsx  SaliencyShared.jsx  ThemeProvider.jsx  ui.jsx
gradglass/dashboard/src/pages/: Alerts.jsx  Analysis.jsx  ArchitectureGraph.jsx  CheckpointBrowser.jsx  Compare.jsx  Data.jsx  DiffViewer.jsx  Evaluation.jsx  GradientFlow.jsx  Home.jsx  Infrastructure.jsx  Interpretability.jsx  LeakageReport.jsx  ModelInternals.jsx  Overview.jsx  RunOverview.jsx  Training.jsx  dataMonitorUtils.js  dataMonitorUtils.test.mjs  interpretabilityUtils.js  interpretabilityUtils.test.mjs
gradglass/dashboard/src/pages/BehaviorExplorer/: BehaviorExplorer.jsx
gradglass/dashboard/src/pages/EvalLab/: EvalLab.jsx
gradglass/dashboard/src/pages/RootCauseMap/: RootCauseMap.jsx
gradglass/dashboard/src/pages/StoryMode/: StoryMode.jsx
gradglass/dashboard/src/store/: useRunStore.js
tests/: _mnist.py  data_leakage.py  test_alerts_api.py  test_api_feature_coverage_example.py  test_artifact_root_resolution.py  test_capture_and_runner.py  test_capture_probes.py  test_core.py  test_dashboard_showcase_example.py  test_data_monitor.py  test_diff_analysis.py  test_evaluation_api.py  test_experiment_tracking.py  test_explainability_artifacts.py  test_gradient_analysis.py  test_gradient_health_suite.py  test_interpretability.py  test_mnist_health_checks.py  test_monitor_browser.py  test_monitor_control.py  test_release_metadata.py  test_server_overview_api.py  test_telemetry.py  test_visualization_payloads.py
tests/fixtures/: mnist_fixture.npz
